Mon Feb 21 16:09:23 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * AUTHORS:

          Chris Cleeland, Don Hudson, and Jeff Schmitz, all of OCI, are now
          OpenDDS AUTHORS.

        * tools/modeling/features/org.opendds.modeling.site/README.txt:

          Updated handling of Eclipse content.jar and artifacts.jar files.

Mon Feb 21 15:52:46 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * README:
        * ChangeLog:
        * docs/history/ChangeLog-2.3:

          Starting new ChangeLog for release 2.4 development, updated version
          numbers in README and in NEWS.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: